--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         <li> <a href="./emperorDisplay/oblIndex.html"> 1984 (Obliteration) </a> </li>
                         <li> <a href="./emperorDisplay/emperorIndex.html"> Emperor Display </a> </li>
                         <li> <a href="./emperorDisplay/woodIndex.html"> Wood Type </a> </li>
+                        <li> <a href="https://webspace.ocad.ca/~yigit.toprak/nullSpeak/index.html"> Ø Speak </a> </li>
                         <li> <a href="./emperorDisplay/creeIndex.html"> Dialogue With The Machine </a> </li>
                         <li> <a href="https://webspace.ocad.ca/~yigit.toprak/Time%20Machine/final/index.html"> Emperor
                                 (WEB) </a> </li>
@@ -119,6 +120,12 @@
 
             <a href="./emperorDisplay/woodIndex.html" class="work">
                 <img src="./images/woodTypeFinalIThink.jpg" alt="">
+            </a>
+
+            <br>
+
+            <a href="https://webspace.ocad.ca/~yigit.toprak/nullSpeak/index.html" class="work">
+                <img src="imagesSecond/null.png" alt="">
             </a>
 
             <br>
