--- a/emperorDisplay/mapIndex.html
+++ b/emperorDisplay/mapIndex.html
@@ -32,6 +32,7 @@
                         <li> <a href="./oblIndex.html"> 1984 (Obliteration) </a> </li>
                         <li> <a href="./emperorIndex.html"> Emperor Display </a> </li>
                         <li> <a href="./woodIndex.html"> Wood Type </a> </li>
+                        <li> <a href="https://webspace.ocad.ca/~yigit.toprak/nullSpeak/index.html"> Ø Speak </a> </li>
                         <li> <a href="./creeIndex.html"> Dialogue With The Machine </a> </li>
                         <li> <a href="https://webspace.ocad.ca/~yigit.toprak/Time%20Machine/final/index.html"> Emperor
                                 (WEB) </a> </li>
