--- a/menu.html
+++ b/menu.html
@@ -35,6 +35,7 @@
                         <li> <a href="./emperorDisplay/oblIndex.html"> 1984 (Obliteration) </a> </li>
                         <li> <a href="./emperorDisplay/emperorIndex.html"> Emperor Display </a> </li>
                         <li> <a href="./emperorDisplay/woodIndex.html"> Wood Type </a> </li>
+                        <li> <a href="https://webspace.ocad.ca/~yigit.toprak/nullSpeak/index.html"> Ø Speak </a> </li>
                         <li> <a href="./emperorDisplay/creeIndex.html"> Dialogue With The Machine </a> </li>
                         <li> <a href="https://webspace.ocad.ca/~yigit.toprak/Time%20Machine/final/index.html"> Emperor
                                 (WEB) </a> </li>
