--- a/emperorDisplay/oblIndex.html
+++ b/emperorDisplay/oblIndex.html
@@ -94,147 +94,141 @@
             <div class="stock">
 
                 <a href="#" class="work">
-                    <img src="../Oblt/c1.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltOne.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/c2.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltTwo.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/c3.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltThree.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/c4.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltFour.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o1.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltFive.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o2.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltSix.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o3.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltSeven.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o4.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltEight.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o5.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltNine.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o6.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltTen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o7.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltEleven.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o8.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltTwelve.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o9.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltThirteen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o10.jpg" alt="">
-                </a>
-
-
-                <br>
-
-                <a href="#" class="work">
-                    <img src="../Oblt/o11.jpg" alt="">
-                </a>
-
-                <br>
-
-                <a href="#" class="work">
-                    <img src="../Oblt/o12.jpg" alt="">
-                </a>
-
-                <br>
-
-                <a href="#" class="work">
-                    <img src="../Oblt/o13.jpg" alt="">
-                </a>
-
-                <br>
-
-                <a href="#" class="work">
-                    <img src="../Oblt/o14.jpg" alt="">
-                </a>
-
-                <br>
-
-                <a href="#" class="work">
-                    <img src="../Oblt/o15.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltFourteen.jpg" alt="">
                 </a>
 
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o16.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltFifteen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o17.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltSixteen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o18.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltSeventeen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o19.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltEighteen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../Oblt/o20.jpg" alt="">
+                    <img src="../imagesSecond/oblt/obltNineteen.jpg" alt="">
+                </a>
+
+
+                <br>
+
+                <a href="#" class="work">
+                    <img src="../imagesSecond/oblt/obltTwentyOne.jpg" alt="">
+                </a>
+
+                <br>
+
+                <a href="#" class="work">
+                    <img src="../imagesSecond/oblt/obltTwentyTwo.jpg" alt="">
+                </a>
+
+                <br>
+
+                <a href="#" class="work">
+                    <img src="../imagesSecond/oblt/obltTwentyThree.jpg" alt="">
+                </a>
+
+                <br>
+
+                <a href="#" class="work">
+                    <img src="../imagesSecond/oblt/obltTwentyFour.jpg" alt="">
                 </a>
 
                 <br>
