--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <br>
 
             <a href=" ./emperorDisplay/oblIndex.html" class="work">
-                <img src="./Oblt/c1.jpg" alt="">
+                <img src="imagesSecond/oblt/obltOne.jpg" alt="">
             </a>
 
             <br>
