--- a/emperorDisplay/emperorIndex.html
+++ b/emperorDisplay/emperorIndex.html
@@ -94,7 +94,7 @@
             <div class="stock">
 
                 <a href="#" class="work">
-                    <img src="../images/emperora.jpg" alt="">
+                    <img src="../imagesSecond/emp/empOne.jpg" alt="">
                 </a>
 
                 <h2>
@@ -117,7 +117,7 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/book.jpg" alt="">
+                    <img src="../imagesSecond/emp/empTwo.jpg" alt="">
                 </a>
 
                 <br>
@@ -135,18 +135,18 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/book2.jpg" alt="">
+                    <img src="../imagesSecond/emp/empThree.jpg" alt="">
                 </a>
 
                 <br>
 
                 <div class="stockGrid">
                     <a href="#" class="work">
-                        <img src="../images/heldBook.jpg" alt="">
+                        <img src="../imagesSecond/emp/empFour.jpg" alt="">
                     </a>
 
                     <a href="#" class="work">
-                        <img src="../images/bookLap.jpg" alt="">
+                        <img src="../imagesSecond/emp/empFive.jpg" alt="">
                     </a>
                 </div>
 
@@ -164,13 +164,13 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/book3.jpg" alt="">
+                    <img src="../imagesSecond/emp/empSix.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/book4.jpg" alt="">
+                    <img src="../imagesSecond/emp/empSeven.jpg" alt="">
                 </a>
 
                 <br>
