--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <br>
 
             <a href="./emperorDisplay/emperorIndex.html" class="work">
-                <img src="./images/emperora.jpg" alt="">
+                <img src="imagesSecond/emp/empOne.jpg" alt="">
             </a>
 
             <br>
