--- a/emperorDisplay/woodIndex.html
+++ b/emperorDisplay/woodIndex.html
@@ -142,7 +142,7 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/w1.jpg" alt="">
+                    <img src="../imagesSecond/wood/woodOne.jpg" alt="">
                 </a>
 
                 <br>
@@ -150,19 +150,19 @@
                 <div class="stockGrid">
 
                     <a href="#" class="work">
-                        <img src="../images/w3.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodTwo.jpg" alt="">
                     </a>
 
                     <a href="#" class="work">
-                        <img src="../images/o1.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodFour.jpg" alt="">
                     </a>
 
                     <a href="#" class="work">
-                        <img src="../images/y1.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodThree.jpg" alt="">
                     </a>
 
                     <a href="#" class="work">
-                        <img src="../images/g1.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodFive.jpg" alt="">
                     </a>
 
                 </div>
@@ -170,23 +170,23 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/f1.jpg" alt="">
+                    <img src="../imagesSecond/wood/woodSix.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/g2.jpg" alt="">
+                    <img src="../imagesSecond/wood/woodSeven.jpg" alt="">
                 </a>
 
                 <div class="stockGrid">
 
                     <a href="#" class="work">
-                        <img src="../images/r1.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodEight.jpg" alt="">
                     </a>
 
                     <a href="#" class="work">
-                        <img src="../images/g3.jpg" alt="">
+                        <img src="../imagesSecond/wood/woodNine.jpg" alt="">
                     </a>
 
                 </div>
@@ -194,14 +194,21 @@
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/full1.jpg" alt="">
+                    <img src="../imagesSecond/wood/woodTen.jpg" alt="">
                 </a>
 
                 <br>
 
                 <a href="#" class="work">
-                    <img src="../images/full2.jpg" alt="">
+                    <img src="../imagesSecond/wood/woodEleven.jpg" alt="">
                 </a>
+
+                <br>
+
+                <a href="#" class="work">
+                    <img src="../imagesSecond/wood/woodTwelve.jpg" alt="">
+                </a>
+
 
             </div>
 
